# computer_graphics_milestone_310

./: CMakeLists.txt  MyOpenGLProject
src/: glad.c  main.cpp
